ZPM-enable and make ClearCookies an instance method

--- a/cls/Forgery/Agent/Core.cls
+++ b/cls/Forgery/Agent/Core.cls
@@ -129,11 +129,10 @@ ListToJSON(urlIndex)
   }
 }
 
-ClassMethod ClearCookies() As %Status
+Method ClearCookies() As %Status
 {
   set i%CookiesJar = ""
   return $$$OK
 }
 
 }
-
