Default base URL and headers; ability to retrieve last %CSP.Response

--- a/cls/Forgery/Agent.cls
+++ b/cls/Forgery/Agent.cls
@@ -48,5 +48,9 @@ Method Options(settings As %DynamicObject, response As %Stream.Object, outputToD
   return ..Request(settings, .response, outputToDevice)
 }
 
+Method GetLastResponse() As %CSP.Response
+{
+  return ..LastResponse
 }
 
+}
