--- a/cls/Forgery/OutputCapturer.cls
+++ b/cls/Forgery/OutputCapturer.cls
@@ -24,7 +24,15 @@ ClassMethod Capture(dispatcherClass As %String, url As %String, httpMethod As %S
     do ##class(%Device).ReDirectIO(1)
     use $io::("^"_$zname)
     set isRedirected = 1
-    set sc = $classmethod(dispatcherClass, "DispatchRequest", url, httpMethod)
+    try {
+      set sc = $classmethod(dispatcherClass, "DispatchRequest", url, httpMethod)
+    } catch e {
+      set sc = e.AsStatus()
+    }
+    if $$$ISERR(sc) {
+      set %response.OutputSessionToken=0
+      do $classmethod(dispatcherClass, "Http500", ##class(%Exception.StatusException).CreateFromStatus(sc))
+    }
     do str.Rewind()
   } catch ex {
     set str = ""
@@ -51,4 +59,3 @@ rchr(time) Quit ""
 }
 
 }
-
