Fix behavior with no mnemonic routine

--- a/cls/Forgery/OutputCapturer.cls
+++ b/cls/Forgery/OutputCapturer.cls
@@ -42,7 +42,7 @@ ClassMethod Capture(dispatcherClass As %String, url As %String, httpMethod As %S
   if oldMnemonic '= "" {
     use initIO::("^"_oldMnemonic)
   } else {
-    use oldMnemonic
+    use initIO::""
   }
 
   do ##class(%Device).ReDirectIO(alreadyRedirected)
