method cleaning, removed duplicate try/catch

--- a/cls/Forgery/OutputCapturer.cls
+++ b/cls/Forgery/OutputCapturer.cls
@@ -24,11 +24,13 @@ ClassMethod Capture(dispatcherClass As %String, url As %String, httpMethod As %S
     do ##class(%Device).ReDirectIO(1)
     use $io::("^"_$zname)
     set isRedirected = 1
-    set sc = $classmethod(dispatcherClass, "DispatchRequest", url, httpMethod)
+    set sc = $classmethod(dispatcherClass, "DispatchRequest", url, httpMethod)  
     do str.Rewind()
   } catch ex {
     set str = ""
     set sc = ex.AsStatus()
+    set %response.OutputSessionToken = 0
+    do $classmethod(dispatcherClass, "Http500", ##class(%Exception.StatusException).CreateFromStatus(sc))
   }
 
   if oldMnemonic '= "" {
