add support for cookies without path

--- a/cls/Forgery/Agent/CookieJar.cls
+++ b/cls/Forgery/Agent/CookieJar.cls
@@ -14,31 +14,40 @@ Method PutCookiesFromResponse(response As %CSP.Response) As %Status
     set value = response.Cookies(index, "v")
     set path = response.Cookies(index, "p")
     
+    // No path means it can be used everywhere.
+    if path = "" set path = "*"
+    
     set i%Cookies(path, name, index) = value   
   }
 }
 
 Method PutCookiesInRequest(request As Forgery.Request) As %Status
 {
-	set name = ""
-	set index = ""
-	
-	for {
-    set name = $order(i%Cookies(request.Application, name))
+  set name = ""
+  set index = ""
+  
+  do PutCookies(request.Application)
+  do PutCookies("*")  
+
+PutCookies(path)
+  if path = "" quit
+  
+  for {
+    set name = $order(i%Cookies(path, name))
     quit:name=""
     
     for {
-    	set index = $order(i%Cookies(request.Application, name, index), 1, value)
-    	quit:index=""
-    	
-    	do request.InsertCookie(name, value)
+      set index = $order(i%Cookies(path, name, index), 1, value)
+      quit:index=""
+      
+      do request.InsertCookie(name, value)
     }
-	}
+  }
 }
 
 Method Empty()
 {
-	kill i%Cookies
+  kill i%Cookies
 }
 
 }
