add support for default headers

--- a/cls/Forgery/Configuration.cls
+++ b/cls/Forgery/Configuration.cls
@@ -9,6 +9,8 @@ Property DeviceLineTerminator As %String [ InitialExpression = {$char(13,10)}, P
 
 Property DeviceCharset As %String [ InitialExpression = "utf-8", Private ];
 
+Property DefaultRequestHeaders As %DynamicObject [ InitialExpression = {{}}, Private ];
+
 Method SetBaseURL(baseURL As %String) As %Status
 {
   set ..BaseURL = baseURL
@@ -53,12 +55,26 @@ Method GetDeviceCharset() As %String [ CodeMode = expression ]
 ..DeviceCharset
 }
 
+Method SetDefaultRequestHeaders(headers As %DynamicObject) As %Status
+{
+  set ..DefaultRequestHeaders = headers
+  return $$$OK
+}
+
+Method GetDefaultRequestHeaders() As %DynamicObject [ CodeMode = expression ]
+{
+..DefaultRequestHeaders
+}
+
 Method Validate() As %Status
 {
   set status = $$$OK
 
   if ..BaseURL = "" set status = $$$ADDSC(status, $$$ERROR($$$GeneralError, "Base URL is required."))
   if '$isobject(..DispatchHandler) set status = $$$ADDSC(status, $$$ERROR($$$GeneralError, "Dispatch handler is required."))
+  if '$isobject(..DefaultRequestHeaders) || ..DefaultRequestHeaders.%Extends("%DynamicObject") {
+    set status = $$$ADDSC(status, $$$ERROR($$$GeneralError, "Default request headers must be an instance of %DynamicObject if provided."))
+  }
 
   if $$$ISERR(status) {
     set status = $$$EMBEDSC($$$ERROR($$$GeneralError, "Configuration validation error: One or more settings are missing:"), status)
