--- a/tests/_setup/Parameters.cls
+++ b/tests/_setup/Parameters.cls
@@ -3,4 +3,6 @@ Class Test.Forgery.Setup.Parameters
 
 Parameter TESTBASEURL = "/test/forgery/api";
 
+Parameter TESTDISPATCHCLASS = "Test.Forgery.Setup.FakeRouter";
+
 }
