--- a/cls/Forgery/Internal/WebApplicationResolver.cls
+++ b/cls/Forgery/Internal/WebApplicationResolver.cls
@@ -1,10 +1,13 @@
 Class Forgery.Internal.WebApplicationResolver Extends %RegisteredObject
 {
 
+Property BaseURL As %String [ Private ];
+
 Property URLMapCache As %DynamicObject [ Private ];
 
-Method %OnNew() As %Status
+Method %OnNew(baseUrl As %String) As %Status
 {
+  set ..BaseURL = baseUrl
   set ..URLMapCache = {}
   return $$$OK
 }
@@ -19,14 +22,21 @@ Method Resolve(url As %String, Output info As %DynamicObject = "") As %Status
   do ..URLMapCache.%Set(url, {})
   set info = ..URLMapCache.%Get(url)
 
+  new $namespace
   set $namespace = "%SYS"
+
+  set baseUrl = ..BaseURL
+
+  if $extract(baseUrl, *) = "/" {
+    set baseUrl = $extract(baseUrl, 1, *-1)
+  }
 
   set result = {}
   set name = ""
-  set urlWithInitialSlash = $select($extract(url) '= "/" : "/"_url, 1: url)
+  set prefixedResource = baseUrl_$select($extract(url) '= "/" : "/"_url, 1: url)
 
   // Reverts the ordering to match longer names first.
-  set rows = ##class(%SQL.Statement).%ExecDirect(, "SELECT TOP 1 Name, DispatchClass, Path FROM SECURITY.APPLICATIONS WHERE ? %STARTSWITH Name ORDER BY LEN(Name) DESC", urlWithInitialSlash)
+  set rows = ##class(%SQL.Statement).%ExecDirect(, "SELECT TOP 1 Name, DispatchClass, Path FROM SECURITY.APPLICATIONS WHERE ? %STARTSWITH Name ORDER BY LEN(Name) DESC", prefixedResource)
   if rows.%Next() {
     set info.Name = rows.%Get("Name")
     set info.DispatchClass = rows.%Get("DispatchClass")
@@ -35,7 +45,7 @@ Method Resolve(url As %String, Output info As %DynamicObject = "") As %Status
   }
 
   if info.%Size() = 0 {
-    return $$$ERROR($$$GeneralError, $$$FormatText("Web application resolver error: No application matching the url '%1' has been found.", url))
+    return $$$ERROR($$$GeneralError, $$$FormatText("Web application resolver error: No application matching the url '%1' has been found.", prefixedResource))
   }
 
   return $$$OK
