make properties editable due to a strange session behavior

--- a/cls/Forgery/CSP/Context.cls
+++ b/cls/Forgery/CSP/Context.cls
@@ -1,17 +1,17 @@
 Class Forgery.CSP.Context Extends %RegisteredObject
 {
 
-Property Request As Forgery.CSP.Request [ ReadOnly ];
+Property Request As Forgery.CSP.Request;
 
-Property Response As %CSP.Response [ ReadOnly ];
+Property Response As %CSP.Response;
 
-Property Session As %CSP.Session [ ReadOnly ];
+Property Session As %CSP.Session;
 
 Method %OnNew(resource As %String, httpMethod As %String, data As %DynamicAbstractObject = {$$$NULLOREF}, appInfo As %DynamicObject, overrides As %DynamicObject = {$$$NULLOREF}) As %Status
 {
-  set i%Request = ##class(Forgery.CSP.Request).%New(resource, httpMethod, data, appInfo, overrides)
-  set i%Response = ##class(%CSP.Response).%New()
-  set i%Session = ##class(%CSP.Session).%New(-1, 0)
+  set ..Request = ##class(Forgery.CSP.Request).%New(resource, httpMethod, data, appInfo, overrides)
+  set ..Response = ##class(%CSP.Response).%New()
+  set ..Session = ##class(%CSP.Session).%New($System.Encryption.GenCryptToken(), 0)
 
   return $$$OK
 }
